--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --link-color: black;
     --link-hover-color: white;
     --light-accent-color: seagreen;
-    --container-background: url(blue\ clear\ glass\ building.png);
+    --container-background: url(blue-clear-glass-building.png);
     --text-font: 'Nunito','Helvetica', sans-serif;
 
     --card-background-color: rgba(7, 54, 66, 0.85);
